--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mingshashan.learn.argo</groupId>
-    <artifactId>argo</artifactId>
+    <groupId>com.mingshashan.learn.algo</groupId>
+    <artifactId>learn-algorithm</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>note</name>
+    <name>learn-algorithm</name>
 
 
     <properties>
